# ImageX

./: OPERATIONS.md  README.md  pyproject.toml
.github/workflows/: test.yml
imagex/: cli.py
imagex/features/: add_noise.py  flip.py
imagex/utils/: progress.py
tests/: conftest.py  test_add_noise.py  test_cli.py  test_compress.py  test_convert.py  test_file_ops.py  test_flip.py  test_remove_metadata.py  test_rename_batch.py  test_resize.py  test_watermark.py
