[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "imagex"
version = "0.1.0"
description = "Image processing CLI tool - right in your terminal"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "kushal1o1"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "rich>=13.0",
    "questionary>=2.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[project.scripts]
imagex = "imagex.cli:main"

[tool.setuptools.packages.find]
include = ["imagex*"]
