[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "imagex"
version = "0.1.1"
description = "Image processing CLI tool - right in your terminal"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "kushal1o1"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",

    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "rich>=13.0",
    "questionary>=2.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
heif = [
    "pillow-heif>=0.16",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "pillow-heif>=0.16",
]

[project.scripts]
imagex = "imagex.cli:main"

[tool.setuptools.packages.find]
include = ["imagex*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
